--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="iBurBa">
-    <title>iBurBa - Shopping Hub</title>
+    <title>iBurBa - AI Virtual Try-On</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
